# KFEmojiPackGenerator

./: Cargo.toml
.github/workflows/: publish.yml  test.yml
src/: lib.rs  main.rs  util.rs
tests/: cli_tests.rs
