[package]
name = "kf_emoji_generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
gumdrop = "0.8"
image = "0.25"
rayon = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
serial_test = "3"

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
